Project7_Kong/yaml/ingress_rate_limit_plugin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    konghq.com/plugins: rate-limit-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
